# YaoXiang

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EgitYaoXiangtestsformatter_integration.rs  LICENSE  README.md  SECURITY.md  benches.rs  build.rs  clippy.toml  i18n-glossary.json  i18n.config.json  package-lock.json  package.json  rustfmt.toml  test_basic.yx  test_simple.yx  test_simple_while.yx  test_while.yx  完整文件分析报告.md  逐文件深度分析报告.md  重复检测报告.md
.cargo/: config.toml
.github/: clabot  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report.zh-CN.yml  config.yml  feature_request.yml  feature_request.zh-CN.yml  task.yml  task.zh-CN.yml
.github/workflows/: _build-platforms.yml  _build-wasm.yml  _build-z3-wasm.yml  auto-translate-i18n.yml  auto-translate.yml  benchmark.yml  ci.yml  cross-compile.yml  deploy-docs.yml  dev.yml  docker-build.yml  docs-deploy.yml  nightly.yml  release.yml  rfc-ai-agent.yml  rfc-check.yml
.omp/: AUTO_DEV_NIGHT_REPORT.md
bench/: README.md  bench.yaml  report.md
bench/runner/: Cargo.toml
benches/: Criterion.toml  formatter.rs  lib.rs
benches/lang_compare/: fibonacci.cpp  fibonacci.go  fibonacci.py  fibonacci.rs  matrix.py
benches/yx_benchmarks/: fibonacci.yx  list_ops.yx  matrix.yx  string_concat.yx
docs/: MAINTENANCE.md  README.en.md  README.md  YaoXiang-async-whitepaper.md  YaoXiang-book.md  YaoXiang-design-manifesto.md  YaoXiang-implementation-plan.md  YaoXiang-language-specification.md  build.js  download.md  glossary.json  index.md  package.json  playground.md  pnpm-lock.yaml  tailwind.config.js  tools.md  vpi18n.config.json
docs/.vitepress/: config.js
docs/architecture/: README.md  compiler-design.md  error-handling.zh.md  project-structure.md  runtime-design.md
docs/archive/: async-whitepaper.md
docs/archived/: docs-restructuring-plan.md
docs/design/: async-whitepaper.md  language-spec.md  manifesto-wtf.md  manifesto.md
docs/en/: contributing.md  download.md  getting-started.md  index.md  tools.md
docs/examples/: complex_test.42  complex_test.yx  error.yx  generic_type_examples.yx  hello.yx  loop.yx  std_io_examples.yx  test_func.42  test_func.yx  test_if_statements.yx  test_main.yx  test_var.yx  unified_type_syntax.42  unified_type_syntax.yx  var.yx
docs/gh/: README.en.md
docs/guides/: YaoXiang-book.en.md  YaoXiang-book.md  error-system-design.md  getting-started.en.md  getting-started.md
docs/implementation/: frontend_refactoring_plan.md  impl-report-rfc010.md  typecheck_fixes_plan.md
docs/maintenance/: MAINTENANCE.md
docs/old/: .gitkeep  YaoXiang-concept-validation.md  YaoXiang-implementation-plan.md  YaoXiang-language-specification.md  docs-restructuring-plan.md
docs/plan/: IMPLEMENTATION-ROADMAP.md  PHASE-IMPLEMENTATION-PLAN.md  over-coupling-analysis.md
docs/plans/: vm-implementation-plan.md  yaoxiang-design-problems.md  yaoxiang-docs-restructuring-plan.md
docs/reference/: index.md
docs/scripts/: cleanup-translations.mjs  generate-rfc-index.js  migrate-rfc-metadata.js
docs/src/: .i18n-cache.json  community.md  download.md  index.md  playground.md  tools.md
docs/tutorial/: README.md  functions.md  getting-started.md  index.md  types.md
docs/works/: .gitkeep
docs/zh/: getting-started.md
examples/: test_hello.yx  test_lambda.yx  test_lambda2.yx  test_mutability.yx  test_simple_var.yx  test_typecheck.yx
locales/: .i18n-cache.json  en.json  ja.json  ru.json  zh-abstract.json  zh-classical.json  zh-x-miao.json  zh.json
metrics/: post_refactor_build_time.txt  pre_refactor_build_time.txt  pre_refactor_loc.txt  pre_refactor_test_results.txt  refactor_assessment.md
scripts/: README.md  build-wasm.sh  check-commit-msg.py  check_rfc_tracking.py  compare.py  generate_report.py  generate_summary.py  rfc_ai_agent.py  rfc_sync.py  rfc_sync_agent.py  setup.iss  sync-syntax.mjs  test_check_rfc_tracking.py  test_rfc_ai_agent.py  translate-incremental.sh  translate.js
scripts/hooks/: check-commit-msg.py  sync-version-badge.py
scripts/i18n/: .env.example  ai.mjs  ai.test.mjs  cache.mjs  cache.test.mjs  config.mjs  config.test.mjs  e2e.test.mjs  package-lock.json  package.json  prompt.mjs  prompt.test.mjs  translate.mjs
scripts/rfc/: ai_agent.py  check_tracking.py  rfc_sync.py  rfc_sync_agent.py  test_ai_agent.py  test_check_tracking.py
src/: debug_test.rs  lib.rs  main.rs  playground.rs
src/backends/: mod.rs
src/embedded/: executor.rs  mod.rs
src/formatter/: command.rs  context.rs  formatter.rs  mod.rs  options.rs  source_map.rs
src/frontend/: compiler.rs  config.rs  mod.rs  pipeline.rs  validate.rs
src/lsp/: capabilities.rs  locate.rs  mod.rs  protocol.rs  server.rs  session.rs  world.rs
src/middle/: bytecode.rs  ir.rs  ir_gen.rs  mod.rs
src/old/: README.md
src/package/: dependency.rs  error.rs  lock.rs  manifest.rs  mod.rs
src/repl/: backend.rs  completer.rs  eval.rs  mod.rs
src/runtime/: mod.rs
src/std/: assert.rs  concurrent.rs  convert.rs  dict.rs  ffi.rs  gen_interfaces.rs  io.rs  list.rs  math.rs  mod.rs  net.rs  os.rs  result.rs  string.rs  time.rs  weak.rs
src/tests/: feature_gate.rs  mod.rs
src/util/: cache.rs  mod.rs  span.rs  time_compat.rs
src/vm/: errors.rs  executor.rs  extfunc.rs  frames.rs  inline_cache.rs  instructions.rs  mod.rs  opcode.rs
tests/: closure_simple.yx  closure_test.yx  closure_test2.yx  formatter_integration.rs  integration.rs  move_rebinding.rs  syntax_rules.rs  test.yx  test_with_use.yx  yx_runner.rs
tests/examples/: demo_ownership.sh
tests/integration/: backends.rs  check.rs  cli.rs  codegen.rs  codegen_extended.rs  error_handling.rs  eval.rs  execution.rs  feature_flags.rs  fstring.rs  if_statement_test.rs  interpreter.rs  interrupt.rs  token_system.rs
tests/old/: README.md
tests/unit/: codegen.rs
tests/yaoxiang/: TEST_STANDARDS.md  closure_test.yx  (+3 more)
tools/: setup-z3.py
vscode-extension/: README.md  package.json
wasm/: Cargo.toml
wasm/src/: lib.rs
xtasks/: Cargo.toml  main.rs
(+2488 files in other folders)
