[package]
name = "yaoxiang"
version = "0.7.6-patch1"
edition = "2021"
rust-version = "1.96"
description = "YaoXiang (爻象) Programming Language - A high-performance language with type-as-everything philosophy"
readme = "README.md"
license = "MIT"
authors = ["YaoXiang Team","ChenXu233 <Woyerpa@outlook.com>"]
repository = "https://github.com/ChenXu233/yaoxiang"

[features]
default = ["cli"]
debug = []
wasm = []
cli = [
    "tokio", "rustyline", "notify", "lsp-server",
    "walkdir", "tempfile", "clap", "crossbeam", "rayon",
    "tracing-subscriber",
]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "yaoxiang"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.8.1"
quickcheck = "1.1.0"
proptest = "1.11"

[[bench]]
name = "lib"
path = "benches/lib.rs"
harness = false

[[bench]]
name = "formatter"
path = "benches/formatter.rs"
harness = false

[dependencies]
# 日志 - tracing
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", optional = true }

# 并发和线程安全
parking_lot = "0.12"
crossbeam = { version = "0.8", optional = true }
rayon = { version = "1.12", optional = true }
once_cell = "1.21"
atomic = "0.6"

# 随机数
rand = "0.10.1"

# 数据结构
indexmap = "2.14.0"
hashbrown = "0.17.1"
smallvec = "1.15.1"

# 字符串处理
regex = "1"
libloading = "0.8"
unicode-ident = "1.0.24"
urlencoding = "2"

# 文件系统
walkdir = { version = "2", optional = true }
tempfile = { version = "3.27.0", optional = true }
notify = { version = "8.2.0", optional = true }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
ron = "0.12.1"
toml = "1.1.2"

# 错误处理
anyhow = "1"
thiserror = "2.0.18"

# 命令行解析
clap = { version = "4.6.1", features = ["derive"], optional = true }

owo-colors = "4.3.0"

# REPL - 交互式编辑
rustyline = { version = "18.0.0", features = ["with-file-history", "with-dirs"], optional = true }

# 异步运行时
tokio = { version = "1.52.3", features = ["full"], optional = true }

# LSP - 语言服务器协议
lsp-types = "0.97"
lsp-server = { version = "0.8", optional = true }

# Wasm support - now handled via target-gated dependencies below

[profile.release]
lto = true
opt-level = 3
strip = true
codegen-units = 1

[profile.dev]
debug = true

[profile.bench]
debug = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

# rand → getrandom 在 wasm32 target 上需要 wasm_js feature
# web-time 用于 wasm32 上替代 std::time::Instant
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
web-time = "1"
